Imported upstream version '5.3.5' of 'upstream'

--- a/geometry_msgs/CMakeLists.txt
+++ b/geometry_msgs/CMakeLists.txt
@@ -26,6 +26,8 @@ set(msg_files
   "msg/Point32.msg"
   "msg/PointStamped.msg"
   "msg/Polygon.msg"
+  "msg/PolygonInstance.msg"
+  "msg/PolygonInstanceStamped.msg"
   "msg/PolygonStamped.msg"
   "msg/Pose.msg"
   "msg/Pose2D.msg"
