--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = fe48e4fbe
-	base = 90b5054d6
+	base = 6356bfeab
 	trim = actionlib_msgs
-	trimbase = 
+	trimbase = 90b5054d6
