--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = fe48e4fbe
-	base = 278235736
+	base = ba782c585
 	trim = common_interfaces
-	trimbase = 
+	trimbase = 278235736
