--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = fe48e4fbe
-	base = dae2e1c5f
+	base = d8dd3450e
 	trim = diagnostic_msgs
-	trimbase = 
+	trimbase = dae2e1c5f
