--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = fe48e4fbe
-	base = a6917f899
+	base = 3520d078f
 	trim = geometry_msgs
-	trimbase = 
+	trimbase = a6917f899
