--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = fe48e4fbe
-	base = e2776457f
+	base = edff1f6ea
 	trim = nav_msgs
-	trimbase = 
+	trimbase = e2776457f
