--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = fe48e4fbe
-	base = d0e92101f
+	base = cbd76af0e
 	trim = sensor_msgs
-	trimbase = 
+	trimbase = d0e92101f
