--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = fe48e4fbe
-	base = 29c09465f
+	base = be643f1bb
 	trim = sensor_msgs_py
-	trimbase = 
+	trimbase = 29c09465f
