--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = fe48e4fbe
-	base = 2cff3f81c
+	base = d0f959fcf
 	trim = shape_msgs
-	trimbase = 
+	trimbase = 2cff3f81c
