--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = fe48e4fbe
-	base = 535089cdc
+	base = 6b6c6d9bd
 	trim = std_msgs
-	trimbase = 
+	trimbase = 535089cdc
