--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = fe48e4fbe
-	base = e20282e23
+	base = fe3688211
 	trim = std_srvs
-	trimbase = 
+	trimbase = e20282e23
