--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = fe48e4fbe
-	base = c8a8b2d92
+	base = f9f401def
 	trim = stereo_msgs
-	trimbase = 
+	trimbase = c8a8b2d92
