--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = fe48e4fbe
-	base = b14f8cee9
+	base = 6aca651ea
 	trim = trajectory_msgs
-	trimbase = 
+	trimbase = b14f8cee9
