--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = fe48e4fbe
-	base = 5d40f7980
+	base = a0eb9cfd7
 	trim = visualization_msgs
-	trimbase = 
+	trimbase = 5d40f7980
