--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/trajectory_msgs
-	previous = 
-	base = 176317ad9
+	previous = 176317ad9
+	base = 7e5c1b175
 	trim = 
 	trimbase = 
