--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/nav_msgs
-	previous = 
-	base = 12e02f607
+	previous = 12e02f607
+	base = fe676be07
 	trim = 
 	trimbase = 
