--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/stereo_msgs
-	previous = 
-	base = 2d33b85d6
+	previous = 2d33b85d6
+	base = 1ad5bcef4
 	trim = 
 	trimbase = 
