--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/sensor_msgs
-	previous = 
-	base = b5c09c9b7
+	previous = b5c09c9b7
+	base = 6c68b3dc7
 	trim = 
 	trimbase = 
