--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/std_msgs
-	previous = 
-	base = d512ad36b
+	previous = d512ad36b
+	base = 0d1c73d13
 	trim = 
 	trimbase = 
