--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/std_srvs
-	previous = 
-	base = d8a640996
+	previous = d8a640996
+	base = 65fdbce87
 	trim = 
 	trimbase = 
