--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/actionlib_msgs
-	previous = 
-	base = 3aea0a4c6
+	previous = 3aea0a4c6
+	base = a3595963a
 	trim = 
 	trimbase = 
