--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/sensor_msgs_py
-	previous = 
-	base = f3194b4ae
+	previous = f3194b4ae
+	base = 44a17f67e
 	trim = 
 	trimbase = 
