--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/geometry_msgs
-	previous = 
-	base = 6da5eda32
+	previous = 6da5eda32
+	base = 7701c5584
 	trim = 
 	trimbase = 
