--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/visualization_msgs
-	previous = 
-	base = 222436359
+	previous = 222436359
+	base = e6a7757d2
 	trim = 
 	trimbase = 
