--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/diagnostic_msgs
-	previous = 
-	base = a825ad0a1
+	previous = a825ad0a1
+	base = 67944aa3b
 	trim = 
 	trimbase = 
