--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/common_interfaces
-	previous = 
-	base = cfecfa324
+	previous = cfecfa324
+	base = 65495a7ba
 	trim = 
 	trimbase = 
