--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/shape_msgs
-	previous = 
-	base = f0dd13447
+	previous = f0dd13447
+	base = cfd105733
 	trim = 
 	trimbase = 
