--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3337b5e08
-	base = 3ee10eb41
+	base = 76a148b13
 	trim = visualization_msgs
-	trimbase = 
+	trimbase = 3ee10eb41
