--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3337b5e08
-	base = 9e9cbeac7
+	base = cdca5e7d2
 	trim = trajectory_msgs
-	trimbase = 
+	trimbase = 9e9cbeac7
