--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3337b5e08
-	base = 3ee10ff9c
+	base = e0d36ee09
 	trim = stereo_msgs
-	trimbase = 
+	trimbase = 3ee10ff9c
