--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3337b5e08
-	base = 61773f5a6
+	base = 7df281147
 	trim = std_srvs
-	trimbase = 
+	trimbase = 61773f5a6
