--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3337b5e08
-	base = 95827c2f8
+	base = 54f9f293c
 	trim = std_msgs
-	trimbase = 
+	trimbase = 95827c2f8
