--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3337b5e08
-	base = 024074ac3
+	base = c3632f2fb
 	trim = shape_msgs
-	trimbase = 
+	trimbase = 024074ac3
