--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3337b5e08
-	base = 51b31e928
+	base = aaf8813f6
 	trim = sensor_msgs_py
-	trimbase = 
+	trimbase = 51b31e928
