--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3337b5e08
-	base = 7bc2b2e80
+	base = 03316506e
 	trim = sensor_msgs
-	trimbase = 
+	trimbase = 7bc2b2e80
