--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3337b5e08
-	base = 85386a2a2
+	base = 72f8a2b83
 	trim = nav_msgs
-	trimbase = 
+	trimbase = 85386a2a2
