--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3337b5e08
-	base = 9047c1873
+	base = 0047d507e
 	trim = geometry_msgs
-	trimbase = 
+	trimbase = 9047c1873
