--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3337b5e08
-	base = 303eab7bc
+	base = 8c6643ea8
 	trim = diagnostic_msgs
-	trimbase = 
+	trimbase = 303eab7bc
