--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3337b5e08
-	base = 8bb4b785b
+	base = 837541a46
 	trim = common_interfaces
-	trimbase = 
+	trimbase = 8bb4b785b
