--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3337b5e08
-	base = bcb596cf1
+	base = 0bf98198e
 	trim = actionlib_msgs
-	trimbase = 
+	trimbase = bcb596cf1
